[tool.poetry]
name = "langchainTranslator"
version = "0.1.0"
description = "Basic usage of langchain framework to translate text"
authors = ["Nagi0 <brunolefonseca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.0"
langserve = {extras = ["all"], version = "^0.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
